--- a/projeto_inicial/admin/telas/edita_cliente.html
+++ b/projeto_inicial/admin/telas/edita_cliente.html
@@ -45,6 +45,10 @@
             </form>
         </section>
     </main>
-    
+
+    <script type="module" src="../controller/atualizaCliente-controller.js"></script> 
 </body>
+
+
+
 </html>
